remove unused config

--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -25,104 +25,7 @@ process {
             "--no-version"
         ].join(' ')
         ext.prefix = { "${meta.id}_chrrename" }
-    }
-
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GET_PANEL:.*' {
-        publishDir = [
-            path: { "${params.outdir}/prep_panel/" },
-            mode: params.publish_dir_mode,
-            enabled: true,
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
-        ]
-    }
-
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GET_PANEL:BCFTOOLS_NORM' {
-        ext.args = [
-            "-m",
-            "-any",
-            "--no-version"
-        ].join(' ')
-        ext.prefix = { "${meta.id}_norm" }
-    }
-
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GET_PANEL:VIEW_VCF_SNPS' {
-        ext.args = [
-            "-m 2",
-            "-M 2",
-            "-v snps",
-            "--output-type z",
-            "--no-version"
-        ].join(' ')
-        ext.prefix = { "${meta.id}_SNPS" }
-    }
-
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GET_PANEL:VIEW_VCF_SITES' {
-        ext.args = [
-            "-G",
-            "-m 2",
-            "-M 2",
-            "-v snps",
-            "--output-type z",
-            "--no-version"
-        ].join(' ')
-        ext.prefix = { "${meta.id}_C${meta.chr}_SITES" }
-    }
-
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GET_PANEL:BCFTOOLS_QUERY' {
-        ext.args = [
-            "-f'%CHROM\t%POS\t%REF,%ALT\\n'",
-        ].join(' ')
-        ext.prefix = { "${meta.id}_SITES_TSV" }
-    }
-
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GET_PANEL:TABIX_TABIX' {
-        ext.args = [
-            "-s1",
-            "-b2",
-            "-e2"
-        ].join(' ')
-        ext.prefix = { "${meta.id}_SITES_TSV" }
-    }
-
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GET_PANEL:VCF_PHASE_SHAPEIT5:BEDTOOLS_MAKEWINDOWS' {
-        ext.args = [
-            '-w 60000',
-            '-s 40000'
-        ].join(' ')
-        ext.prefix = { "${meta.id}_chunks" }
-        publishDir = [
-            enabled: false
-        ]
-    }
-
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_PANEL:.*' {
-        publishDir = [
-            path: { "${params.outdir}/prep_panel/concat" },
-            mode: params.publish_dir_mode,
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
-        ]
-        ext.prefix = { "${meta.id}_sites_concat" }
-    }
-
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_PANEL:BCFTOOLS_CONCAT' {
-        ext.args = {[
-            "--ligate",
-            "--output-type z",
-        ].join(" ").trim()}
-    }
-
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_PANEL:BCFTOOLS_INDEX' {
-        ext.args     = "--tbi"
-    }
-}
-
-process {
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CHR_CHECK:.*' {
-        publishDir = [
-            path: { "${params.outdir}/prep_panel/" },
-            mode: params.publish_dir_mode,
-            enabled: false
-        ]
+        publishDir = [ enabled: false ]
     }
 
         withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_NORM' {
@@ -131,6 +34,7 @@ process {
         cpus          = 2
         memory        = 400.MB
         maxRetries    = 2
+        publishDir = [ enabled: false ]
     }
 
         withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_INDEX' {
@@ -144,6 +48,7 @@ process {
         cpus          = 2
         memory        = 400.MB
         maxRetries    = 2
+        publishDir = [ enabled: false ]
     }
 
         withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_INDEX_2' {
@@ -151,6 +56,7 @@ process {
         cpus          = 2
         memory        = 400.MB
         maxRetries    = 2
+        publishDir = [ enabled: false ]
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SITES_EXTRACT_BCFTOOLS:VIEW_VCF_SNPS' {
@@ -162,6 +68,7 @@ process {
             "--no-version"
         ].join(' ')
         ext.prefix = { "${meta.id}_SNPS" }
+        publishDir = [ enabled: false ]
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SITES_EXTRACT_BCFTOOLS:VIEW_VCF_SITES' {
@@ -174,6 +81,11 @@ process {
             "--no-version"
         ].join(' ')
         ext.prefix = { "${meta.id}_C${meta.chr}_SITES" }
+        publishDir = [
+            path: { "${params.outdir}/prep_panel/sites/vcf/" },
+            mode: params.publish_dir_mode,
+            enabled: true
+        ]
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SITES_EXTRACT_BCFTOOLS:BCFTOOLS_QUERY' {
@@ -181,6 +93,11 @@ process {
             "-f'%CHROM\t%POS\t%REF,%ALT\\n'",
         ].join(' ')
         ext.prefix = { "${meta.id}_glimpse_SITES_TSV" }
+        publishDir = [
+            path: { "${params.outdir}/prep_panel/sites/tsv/" },
+            mode: params.publish_dir_mode,
+            enabled: true
+        ]
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SITES_EXTRACT_BCFTOOLS:TABIX_TABIX' {
@@ -190,6 +107,11 @@ process {
             "-e2"
         ].join(' ')
         ext.prefix = { "${meta.id}_glimpse_SITES_TSV" }
+        publishDir = [
+            path: { "${params.outdir}/prep_panel/sites/tsv/" },
+            mode: params.publish_dir_mode,
+            enabled: true
+        ]
     }
 
     // Phasing
@@ -199,24 +121,27 @@ process {
             '-s 40000'
         ].join(' ')
         ext.prefix = { "${meta.id}_chunks" }
-        publishDir = [
-            enabled: false
-        ]
+        publishDir = [ enabled: false ]
     }
 
     // TSV
-
         withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SITES_EXTRACT_BCFTOOLS:BCFTOOLS_QUERY_STITCH' {
         ext.args = [
             "-f'%CHROM\t%POS\t%REF\t%ALT\\n'",
         ].join(' ')
         ext.prefix = { "${meta.id}_${meta.chr}_posfile_stitch" }
+        publishDir = [ enabled: false ]
     }
 
         withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SITES_EXTRACT_BCFTOOLS:GAWK_STITCH' {
         ext.args      = "'{ key = \$1 FS \$2 } !seen[key]++'"
-        ext.prefix    = { "${meta.id}_${meta.chr}_posfile" }
-        ext.suffix = ".txt"
+        ext.prefix    = { "${meta.id}_${meta.chr}_posfile_stitch" }
+        ext.suffix = "txt"
+        publishDir = [
+            path: { "${params.outdir}/prep_panel/sites/tsv/" },
+            mode: params.publish_dir_mode,
+            enabled: true
+        ]
     }
 
 
