back to working configs for stitch

--- a/conf/steps/imputation_stitch.config
+++ b/conf/steps/imputation_stitch.config
@@ -21,6 +21,12 @@ process {
     }
 
 
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:PREPARE_INPUT_STITCH:GAWK' {
+        ext.args      = "'{ key = \$1 FS \$2 } !seen[key]++'"
+        ext.prefix    = { "${meta.id}_${meta.chr}_no_multiallelic" }
+        ext.suffix = ".txt"
+    }
+
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:PREPARE_INPUT_STITCH:BCFTOOLS_NORM' {
         ext.args      = '-m +any --output-type z'
         ext.prefix    = { "${meta.id}_${meta.chr}_multiallelic" }
@@ -48,6 +54,16 @@ process {
         cpus          = 2
         memory        = 400.MB
         maxRetries    = 2
+    }
+
+
+
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:PREPARE_INPUT_STITCH:BCFTOOLS_QUERY' {
+        ext.args = [
+            "-f'%CHROM\t%POS\t%REF\t%ALT\\n'",
+        ].join(' ')
+        ext.prefix = { "${meta.id}_${meta.chr}_posfile_stitch" }
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_STITCH:BCFTOOLS_INDEX' {
