--- a/conf/test_stitch.config
+++ b/conf/test_stitch.config
@@ -27,6 +27,7 @@ params {
     fasta  = "https://raw.githubusercontent.com/nf-core/test-datasets/phaseimpute/data/reference_genome/21_22/hs38DH.chr21_22.fa"
     phased = true
     panel  = "${projectDir}/tests/csv/panel.csv"
+    //posfile = "https://github.com/nf-core/test-datasets/raw/phaseimpute/data/panel/22/chr22_posfile_stitch.txt"
 
     // Impute parameters
     step   = "impute"
