allow several steps to be selected

--- a/conf/test.config
+++ b/conf/test.config
@@ -29,6 +29,6 @@ params {
     phased = true
 
     // Impute parameters
-    step   = "impute"
+    step   = "panelprep,impute"
     tools  = "glimpse1"
 }
