--- a/conf/test_stitch.config
+++ b/conf/test_stitch.config
@@ -30,6 +30,6 @@ params {
     //posfile = "https://github.com/nf-core/test-datasets/raw/phaseimpute/data/panel/22/chr22_posfile_stitch.txt"
 
     // Impute parameters
-    step   = "impute"
+    step   = "panelprep,impute"
     tools  = "stitch"
 }
