--- a/conf/steps/imputation_stitch.config
+++ b/conf/steps/imputation_stitch.config
@@ -21,7 +21,7 @@ process {
     }
 
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:PREPARE_INPUT_STITCH:GAWK' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:PREPARE_POSFILE_TSV:GAWK' {
         ext.args      = "'{ key = \$1 FS \$2 } !seen[key]++'"
         ext.prefix    = { "${meta.id}_${meta.chr}_no_multiallelic" }
         ext.suffix = ".txt"
@@ -59,7 +59,7 @@ process {
 
 
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:PREPARE_INPUT_STITCH:BCFTOOLS_QUERY' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:PREPARE_POSFILE_TSV:BCFTOOLS_QUERY' {
         ext.args = [
             "-f'%CHROM\t%POS\t%REF\t%ALT\\n'",
         ].join(' ')
