--- a/conf/test_stitch.config
+++ b/conf/test_stitch.config
@@ -26,10 +26,9 @@ params {
     // Genome references
     fasta  = "https://raw.githubusercontent.com/nf-core/test-datasets/phaseimpute/data/reference_genome/21_22/hs38DH.chr21_22.fa"
     phased = true
-    panel  = "${projectDir}/tests/csv/panel.csv"
-    //posfile = "https://github.com/nf-core/test-datasets/raw/phaseimpute/data/panel/22/chr22_posfile_stitch.txt"
+    posfile = "https://raw.githubusercontent.com/nf-core/test-datasets/phaseimpute/data/panel/22/chr22_posfile_stitch.txt"
 
     // Impute parameters
-    step   = "panelprep,impute"
+    step   = "impute"
     tools  = "stitch"
 }
