add posfile as csv

--- a/conf/test_stitch.config
+++ b/conf/test_stitch.config
@@ -25,7 +25,7 @@ params {
 
     // Genome references
     fasta   = "https://raw.githubusercontent.com/nf-core/test-datasets/phaseimpute/data/reference_genome/21_22/hs38DH.chr21_22.fa"
-    posfile = "https://raw.githubusercontent.com/nf-core/test-datasets/phaseimpute/data/panel/22/chr22_posfile_stitch.txt"
+    posfile = "${projectDir}/tests/csv/posfile.csv"
 
     // Impute parameters
     step   = "impute"
