move hap and legend generation to panelprep

--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -108,6 +108,11 @@ process {
         ]
     }
 
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_CONVERT' {
+        ext.args = {"--haplegendsample ${meta.id}_${meta.chr}"}
+        maxRetries    = 2
+    }
+
     // Phasing
         withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_PHASE_PANEL:VCF_PHASE_SHAPEIT5:BEDTOOLS_MAKEWINDOWS' {
         ext.args = [
