arrange directories and make uniform module names

--- a/conf/steps/imputation_stitch.config
+++ b/conf/steps/imputation_stitch.config
@@ -20,10 +20,17 @@ process {
         ]
     }
 
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:PREPARE_POSFILE_TSV:.*' {
+        publishDir = [
+            path: { "${params.outdir}/prep_panel/posfile/" },
+            mode: params.publish_dir_mode,
+            enabled: true
+        ]
+    }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:PREPARE_POSFILE_TSV:GAWK' {
         ext.args      = "'{ key = \$1 FS \$2 } !seen[key]++'"
-        ext.prefix    = { "${meta.id}_${meta.chr}_no_multiallelic" }
+        ext.prefix    = { "${meta.id}_${meta.chr}_posfile_stitch" }
         ext.suffix = ".txt"
     }
 
@@ -31,36 +38,50 @@ process {
         ext.args      = '-m +any --output-type z'
         ext.prefix    = { "${meta.id}_${meta.chr}_multiallelic" }
         maxRetries    = 2
+        publishDir = [enabled: false]
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:PREPARE_INPUT_STITCH:BCFTOOLS_VIEW' {
         ext.args      = '-v snps -Oz'
         ext.prefix    = { "${meta.id}_${meta.chr}_biallelic" }
         maxRetries    = 2
+        publishDir = [enabled: false]
+
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:PREPARE_INPUT_STITCH:BCFTOOLS_INDEX' {
         maxRetries    = 2
+        publishDir = [enabled: false]
+
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:PREPARE_INPUT_STITCH:BCFTOOLS_INDEX_2' {
         ext.args      = '--tbi'
         maxRetries    = 2
+        publishDir = [enabled: false]
+
     }
-
-
-
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:PREPARE_POSFILE_TSV:BCFTOOLS_QUERY' {
         ext.args = [
             "-f'%CHROM\t%POS\t%REF\t%ALT\\n'",
         ].join(' ')
         ext.prefix = { "${meta.id}_${meta.chr}_posfile_stitch" }
+        publishDir = [enabled: false]
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_STITCH:.*' {
+        publishDir = [
+            path: { "${params.outdir}/imputation/stitch/" },
+            mode: params.publish_dir_mode,
+            enabled: true
+        ]
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_STITCH:BCFTOOLS_INDEX' {
         ext.args      = '--tbi'
         maxRetries    = 2
+        publishDir = [enabled: false]
     }
 
 
