--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -111,6 +111,11 @@ process {
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_CONVERT' {
         ext.args = {"--haplegendsample ${meta.id}_${meta.chr}"}
         maxRetries    = 2
+        publishDir = [
+            path: { "${params.outdir}/prep_panel/haplegend/" },
+            mode: params.publish_dir_mode,
+            enabled: true
+        ]
     }
 
     // Phasing
