--- a/conf/steps/imputation_quilt.config
+++ b/conf/steps/imputation_quilt.config
@@ -53,7 +53,7 @@ process {
         publishDir = [enabled: false]
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:IMPUTE_QUILT:INDEX1' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:IMPUTE_QUILT:BCFTOOLS_INDEX_1' {
         ext.args     = "--tbi"
         publishDir = [enabled: false]
     }
@@ -63,7 +63,7 @@ process {
         ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}.impute.annotate" }
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:IMPUTE_QUILT:INDEX2' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:IMPUTE_QUILT:BCFTOOLS_INDEX_2' {
         ext.args     = "--tbi"
     }
 
