separate concatenation per tool

--- a/conf/steps/imputation_glimpse1.config
+++ b/conf/steps/imputation_glimpse1.config
@@ -81,4 +81,26 @@ process {
             path: { "${params.outdir}/imputation/glimpse1" }
         ]
     }
+
+        withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_GLIMPSE1:.*' {
+        publishDir = [
+            [
+                path: { "${params.outdir}/imputation/glimpse1/concat" },
+                mode: params.publish_dir_mode,
+            ],
+        ]
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_GLIMPSE1:BCFTOOLS_CONCAT' {
+    ext.args = {[
+        "--ligate",
+        "--output-type z",
+    ].join(" ").trim()}
+    ext.prefix = { "${meta.id}_glimpse1" }
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_GLIMPSE1:BCFTOOLS_INDEX' {
+        ext.args     = "--tbi"
+        ext.prefix = { "${meta.id}_glimpse1" }
+    }
 }
