--- a/conf/steps/imputation_quilt.config
+++ b/conf/steps/imputation_quilt.config
@@ -67,4 +67,26 @@ process {
         ext.args     = "--tbi"
     }
 
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_QUILT:.*' {
+        publishDir = [
+            [
+                path: { "${params.outdir}/imputation/quilt/concat" },
+                mode: params.publish_dir_mode,
+            ],
+        ]
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_QUILT:BCFTOOLS_CONCAT' {
+    ext.args = {[
+        "--ligate",
+        "--output-type z",
+    ].join(" ").trim()}
+    ext.prefix = { "${meta.id}_quilt" }
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_QUILT:BCFTOOLS_INDEX' {
+        ext.args     = "--tbi"
+        ext.prefix = { "${meta.id}_quilt" }
+    }
+
 }
