--- a/conf/steps/imputation_stitch.config
+++ b/conf/steps/imputation_stitch.config
@@ -84,6 +84,28 @@ process {
         publishDir = [enabled: false]
     }
 
+        withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_STITCH:.*' {
+        publishDir = [
+            [
+                path: { "${params.outdir}/imputation/stitch/concat" },
+                mode: params.publish_dir_mode,
+            ],
+        ]
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_STITCH:BCFTOOLS_CONCAT' {
+    ext.args = {[
+        "--ligate",
+        "--output-type z",
+    ].join(" ").trim()}
+    ext.prefix = { "${meta.id}_stitch" }
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_STITCH:BCFTOOLS_INDEX' {
+        ext.args     = "--tbi"
+        ext.prefix = { "${meta.id}_stitch" }
+    }
+
 
 
 }
