add remove samples from panel option

--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -148,5 +148,16 @@ process {
         ]
     }
 
+        withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_REMOVE' {
+        ext.args      = { "-Oz -s^${params.remove_samples}" }
+        ext.prefix    = { "${meta.id}_${meta.chr}_biallelic_removed_samples" }
+        maxRetries    = 2
+        publishDir = [ enabled: false ]
+    }
+
+        withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_INDEX_4' {
+        ext.args     = "--tbi"
+        publishDir = [enabled: false]
+    }
 
 }
