--- a/conf/test_full.config
+++ b/conf/test_full.config
@@ -29,4 +29,7 @@ params {
     panel                  = "${projectDir}/tests/csv/panel_full.csv"
     input_region_string    = "all"
     step                   = "simulate"
+
+    // Settings
+    remvove_samples        = "NA12878,NA12891,NA12892"
 }
