--- a/nextflow.config
+++ b/nextflow.config
@@ -22,6 +22,7 @@ params {
     panel                       = null
     phased                      = null
     rename_chr                  = false
+    remove_samples              = null
 
     // References
     genome                      = null
