add glimpse2 chunks to make_chunks panelprep

--- a/conf/steps/imputation_quilt.config
+++ b/conf/steps/imputation_quilt.config
@@ -21,22 +21,20 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:MAKE_CHUNKS:.*' {
-
-        ext.prefix = { "${meta.id}_${meta.chr}" }
-
         publishDir = [
-            [
-                path: { "${params.outdir}/imputation/quilt/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}_chunk" },
-                mode: params.publish_dir_mode,
-                enabled: false
-            ],
-
-
+            path: { "${params.outdir}/prep_panel/chunks/" },
+            mode: params.publish_dir_mode,
+            enabled: true
         ]
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:MAKE_CHUNKS:GLIMPSE_CHUNK' {
-        ext.prefix = { "${meta.id}_${meta.chr}" }
+        ext.prefix    = { "${meta.panel}_${meta.chr}_chunks_glimpse1" }
+        publishDir = [
+            path: { "${params.outdir}/prep_panel/chunks/glimpse1/" },
+            mode: params.publish_dir_mode,
+            enabled: true
+        ]
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:IMPUTE_QUILT:.*' {
