--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -160,4 +160,36 @@ process {
         publishDir = [ enabled: false ]
     }
 
+    // Subworkflow: Make chunks
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:MAKE_CHUNKS:.*' {
+        publishDir = [
+            path: { "${params.outdir}/prep_panel/chunks/" },
+            mode: params.publish_dir_mode,
+            enabled: true
+        ]
+    }
+
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:MAKE_CHUNKS:GLIMPSE2_CHUNK' {
+        ext.args = [
+            "--window-mb 2.0"
+        ].join(' ')
+        ext.prefix    = { "${meta.panel}_${meta.chr}_chunks_glimpse2" }
+        publishDir = [
+            path: { "${params.outdir}/prep_panel/chunks/glimpse2/" },
+            mode: params.publish_dir_mode,
+            enabled: true
+        ]
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:MAKE_CHUNKS:GLIMPSE2_SPLITREFERENCE' {
+        ext.prefix    = { "${meta.panel}_${meta.chr}_chunks_glimpse2" }
+        publishDir = [
+            path: { "${params.outdir}/prep_panel/chunks/glimpse2/" },
+            mode: params.publish_dir_mode,
+            enabled: true
+        ]
+    }
+
 }
