change subworkflow name to nf-core standards

--- a/conf/steps/imputation_quilt.config
+++ b/conf/steps/imputation_quilt.config
@@ -20,7 +20,7 @@ process {
         ]
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:MAKE_CHUNKS:.*' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CHUNK_GLIMPSE:.*' {
         publishDir = [
             path: { "${params.outdir}/prep_panel/chunks/" },
             mode: params.publish_dir_mode,
@@ -28,7 +28,7 @@ process {
         ]
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:MAKE_CHUNKS:GLIMPSE_CHUNK' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CHUNK_GLIMPSE:GLIMPSE_CHUNK' {
         ext.prefix    = { "${meta.panel}_${meta.chr}_chunks_glimpse1" }
         publishDir = [
             path: { "${params.outdir}/prep_panel/chunks/glimpse1/" },
