--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -162,7 +162,7 @@ process {
 
     // Subworkflow: Make chunks
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:MAKE_CHUNKS:.*' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CHUNK_GLIMPSE:.*' {
         publishDir = [
             path: { "${params.outdir}/prep_panel/chunks/" },
             mode: params.publish_dir_mode,
@@ -171,7 +171,7 @@ process {
     }
 
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:MAKE_CHUNKS:GLIMPSE2_CHUNK' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CHUNK_GLIMPSE:GLIMPSE2_CHUNK' {
         ext.args = [
             "--window-mb 2.0"
         ].join(' ')
@@ -183,7 +183,7 @@ process {
         ]
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:MAKE_CHUNKS:GLIMPSE2_SPLITREFERENCE' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CHUNK_GLIMPSE:GLIMPSE2_SPLITREFERENCE' {
         ext.prefix    = { "${meta.panel}_${meta.chr}_chunks_glimpse2" }
         publishDir = [
             path: { "${params.outdir}/prep_panel/chunks/glimpse2/" },
