--- a/conf/test_full.config
+++ b/conf/test_full.config
@@ -16,7 +16,7 @@ params {
 
 
     // Genome references
-    map             = "https://bochet.gcc.biostat.washington.edu/beagle/genetic_maps/plink.GRCh38.map.zip"
+    //map             = "https://bochet.gcc.biostat.washington.edu/beagle/genetic_maps/plink.GRCh38.map.zip"
     genome          = "GRCh38"
 
     // Resources increase incompatible with Github Action
@@ -27,9 +27,9 @@ params {
     // Input data
     input                  = "${projectDir}/tests/csv/sample_sim_full.csv"
     panel                  = "${projectDir}/tests/csv/panel_full.csv"
-    input_region_string    = "all"
-    step                   = "simulate"
+    step                   = "all"
 
     // Settings
-    remvove_samples        = "NA12878,NA12891,NA12892"
+    tools                 = "glimpse1"
+    remove_samples        = "NA12878,NA12891,NA12892"
 }
