--- a/nextflow.config
+++ b/nextflow.config
@@ -57,6 +57,10 @@ params {
     seed                       = 1
     posfile                    = null
 
+    // GLIMPSE2
+    binaryref                  = null
+    chunks                     = null
+
     // Boilerplate options
     outdir                      = null
     publish_dir_mode            = 'copy'
@@ -205,13 +209,14 @@ profiles {
         executor.memory        = 8.GB
     }
 
-    test        { includeConfig 'conf/test.config'          }
-    test_full   { includeConfig 'conf/test_full.config'     }
-    test_sim    { includeConfig 'conf/test_sim.config'      }
-    test_validate { includeConfig 'conf/test_validate.config' }
-    test_all      { includeConfig 'conf/test_all.config'      }
-    test_quilt  { includeConfig 'conf/test_quilt.config'    }
-    test_stitch { includeConfig 'conf/test_stitch.config'   }
+    test            { includeConfig 'conf/test.config'          }
+    test_full       { includeConfig 'conf/test_full.config'     }
+    test_sim        { includeConfig 'conf/test_sim.config'      }
+    test_validate   { includeConfig 'conf/test_validate.config' }
+    test_all        { includeConfig 'conf/test_all.config'      }
+    test_quilt      { includeConfig 'conf/test_quilt.config'    }
+    test_stitch     { includeConfig 'conf/test_stitch.config'   }
+    test_glimpse2   { includeConfig 'conf/test_glimpse2.config'   }
 
 }
 
