small modification to make quilt run again

--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -35,7 +35,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_NORM' {
-        ext.args      = '-m -any --no-version --output-type z'
+        ext.args      = '-m +any --no-version --output-type z'
         ext.prefix    = { "${meta.id}_${meta.chr}_multiallelic" }
         maxRetries    = 2
         publishDir = [ enabled: false ]
