--- a/nextflow.config
+++ b/nextflow.config
@@ -87,7 +87,11 @@ params {
     max_time                    = '240.h'
 
     // Schema validation default options
-    validate_params                     = true
+    validationFailUnrecognisedParams = false
+    validationLenientMode            = false
+    validationSchemaIgnoreParams     = 'genomes,igenomes_base'
+    validationShowHiddenParams       = false
+    validate_params                  = true
 
 }
 
@@ -224,15 +228,9 @@ docker.registry      = 'quay.io'
 podman.registry      = 'quay.io'
 singularity.registry = 'quay.io'
 
+// Nextflow plugins
 plugins {
-    id 'nf-schema@2.0.0'
-}
-
-validation {
-    failUnrecognisedParams = false
-    lenientMode            = true
-    defaultIgnoreParams    = [ 'genomes', 'igenomes_base' ]
-    showHiddenParams       = false
+    id 'nf-validation@1.1.3' // Validation of pipeline parameters and creation of an input channel from a sample sheet
 }
 
 // Load igenomes.config if required
