Uniformize config files

--- a/conf/steps/initialisation.config
+++ b/conf/steps/initialisation.config
@@ -12,10 +12,6 @@
 
 process {
     withName: 'PIPELINE_INITIALISATION:.*' {
-        publishDir = [
-            path: { "${params.outdir}/initialisation/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
-            mode: params.publish_dir_mode,
-            enabled: false
-        ]
+        publishDir = [ enabled: false ]
     }
 }
