--- a/conf/steps/simulation.config
+++ b/conf/steps/simulation.config
@@ -12,16 +12,9 @@
 
 process {
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_REGION:.*' {
-        publishDir = [
-            path: { "${params.outdir}/simulation/" },
-            mode: params.publish_dir_mode,
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
-            enabled: false
-        ]
+        publishDir = [ enabled: false ]
     }
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_REGION:SAMTOOLS_VIEW' {
-        ext.args = [
-        ].join(' ')
         ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}" }
     }
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:.*' {
@@ -32,13 +25,9 @@ process {
         ]
     }
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:SAMTOOLS_COVERAGE' {
-        ext.args = [
-        ].join(' ')
         ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}.stats" }
     }
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE:SAMTOOLS_VIEW' {
-        ext.args = [
-        ].join(' ')
         ext.prefix = { "${meta.id}_D${meta.depth}_R${meta.region.replace(':','_')}" }
     }
 }
