--- a/conf/test_sim.config
+++ b/conf/test_sim.config
@@ -25,6 +25,6 @@ params {
     depth                = 1
 
     // Genome references
-    fasta  = "https://raw.githubusercontent.com/nf-core/test-datasets/phaseimpute/data/reference_genome/21_22/hs38DH.chr21_22.fa"
+    fasta  = params.pipelines_testdata_base_path + "reference_genome/21_22/hs38DH.chr21_22.fa"
     step   = "simulate"
 }
