--- a/conf/steps/imputation_glimpse1.config
+++ b/conf/steps/imputation_glimpse1.config
@@ -13,13 +13,9 @@
 process {
     // Configuration for the glimpse1 imputation subworkflow
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_INPUT:.*' {
-        publishDir = [
-            path: { "${params.outdir}/imputation/glimpse1/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
-            mode: params.publish_dir_mode,
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
-            enabled: false
-        ]
+        publishDir = [ enabled: false ]
     }
+
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_INPUT:BCFTOOLS_MPILEUP' {
         ext.args = [
             "-I",
@@ -34,18 +30,18 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_INPUT:BCFTOOLS_ANNOTATE' {
-        ext.args     = "--set-id '%CHROM:%POS:%REF:%ALT' -Oz"
+        ext.args   = "--set-id '%CHROM:%POS:%REF:%ALT' -Oz"
         ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}.annotate" }
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_INPUT:BCFTOOLS_INDEX' {
-        ext.args     = "--tbi"
+        ext.args = "--tbi"
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:.*' {
         publishDir = [
-            path: { "${params.outdir}/imputation/glimpse1/" },
-            mode: params.publish_dir_mode,
+            path  : { "${params.outdir}/imputation/glimpse1/" },
+            mode  : params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
@@ -60,9 +56,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:GLIMPSE_PHASE' {
-        ext.args = [
-            "--impute-reference-only-variants"
-        ].join(' ')
+        ext.args   = ["--impute-reference-only-variants"].join(' ')
         ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}.phase" }
         ext.suffix = "bcf"
         publishDir = [ enabled: false ]
@@ -79,24 +73,20 @@ process {
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:INDEX_LIGATE' {
         publishDir = [
             path: { "${params.outdir}/imputation/glimpse1" }
+            mode: params.publish_dir_mode,
         ]
     }
 
-        withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_GLIMPSE1:.*' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_GLIMPSE1:.*' {
         publishDir = [
-            [
-                path: { "${params.outdir}/imputation/glimpse1/concat" },
-                mode: params.publish_dir_mode,
-            ],
+            path: { "${params.outdir}/imputation/glimpse1/concat" },
+            mode: params.publish_dir_mode,
         ]
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_GLIMPSE1:BCFTOOLS_CONCAT' {
-    ext.args = {[
-        "--ligate",
-        "--output-type z",
-    ].join(" ").trim()}
-    ext.prefix = { "${meta.id}_glimpse1" }
+        ext.args   = ["--ligate", "--output-type z"].join(' ')
+        ext.prefix = { "${meta.id}_glimpse1" }
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_GLIMPSE1:BCFTOOLS_INDEX' {
