--- a/conf/steps/imputation_quilt.config
+++ b/conf/steps/imputation_quilt.config
@@ -12,14 +12,6 @@
 
 process {
 
-    withName: CUSTOM_DUMPSOFTWAREVERSIONS {
-        publishDir = [
-            path: { "${params.outdir}/pipeline_info" },
-            mode: params.publish_dir_mode,
-            pattern: '*_versions.yml'
-        ]
-    }
-
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CHUNK_GLIMPSE:.*' {
         publishDir = [
             path: { "${params.outdir}/prep_panel/chunks/" },
@@ -39,10 +31,8 @@ process {
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_QUILT:.*' {
         publishDir = [
-            [
-                path: { "${params.outdir}/imputation/quilt/" },
-                mode: params.publish_dir_mode,
-            ],
+            path: { "${params.outdir}/imputation/quilt/" },
+            mode: params.publish_dir_mode,
         ]
     }
 
@@ -67,19 +57,14 @@ process {
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_QUILT:.*' {
         publishDir = [
-            [
-                path: { "${params.outdir}/imputation/quilt/concat" },
-                mode: params.publish_dir_mode,
-            ],
+            path: { "${params.outdir}/imputation/quilt/concat" },
+            mode: params.publish_dir_mode,
         ]
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_QUILT:BCFTOOLS_CONCAT' {
-    ext.args = {[
-        "--ligate",
-        "--output-type z",
-    ].join(" ").trim()}
-    ext.prefix = { "${meta.id}_quilt" }
+        ext.args = ["--ligate", "--output-type z",].join(' ')
+        ext.prefix = { "${meta.id}_quilt" }
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_QUILT:BCFTOOLS_INDEX' {
