--- a/conf/steps/imputation_stitch.config
+++ b/conf/steps/imputation_stitch.config
@@ -12,14 +12,6 @@
 
 process {
 
-    withName: CUSTOM_DUMPSOFTWAREVERSIONS {
-        publishDir = [
-            path: { "${params.outdir}/pipeline_info" },
-            mode: params.publish_dir_mode,
-            pattern: '*_versions.yml'
-        ]
-    }
-
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:PREPARE_POSFILE_TSV:.*' {
         publishDir = [
             path: { "${params.outdir}/prep_panel/posfile/" },
@@ -29,43 +21,26 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:PREPARE_POSFILE_TSV:GAWK' {
-        ext.args      = "'{ key = \$1 FS \$2 } !seen[key]++'"
-        ext.prefix    = { "${meta.id}_${meta.chr}_posfile_stitch" }
-        ext.suffix = ".txt"
+        ext.args   = "'{ key = \$1 FS \$2 } !seen[key]++'" // Remove duplicates
+        ext.prefix = { "${meta.id}_${meta.chr}_posfile_stitch" }
+        ext.suffix = "txt"
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:PREPARE_INPUT_STITCH:BCFTOOLS_NORM' {
-        ext.args      = '-m +any --output-type z'
-        ext.prefix    = { "${meta.id}_${meta.chr}_multiallelic" }
-        maxRetries    = 2
+        ext.args   = '-m +any --output-type z'
+        ext.prefix = { "${meta.id}_${meta.chr}_multiallelic" }
         publishDir = [enabled: false]
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:PREPARE_INPUT_STITCH:BCFTOOLS_VIEW' {
-        ext.args      = '-v snps -Oz'
-        ext.prefix    = { "${meta.id}_${meta.chr}_biallelic" }
-        maxRetries    = 2
-        publishDir = [enabled: false]
-
-    }
-
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:PREPARE_INPUT_STITCH:BCFTOOLS_INDEX' {
-        maxRetries    = 2
-        publishDir = [enabled: false]
-
-    }
-
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:PREPARE_INPUT_STITCH:BCFTOOLS_INDEX_2' {
-        ext.args      = '--tbi'
-        maxRetries    = 2
+        ext.args   = '-v snps -Oz'
+        ext.prefix = { "${meta.id}_${meta.chr}_biallelic" }
         publishDir = [enabled: false]
 
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:PREPARE_POSFILE_TSV:BCFTOOLS_QUERY' {
-        ext.args = [
-            "-f'%CHROM\t%POS\t%REF\t%ALT\\n'",
-        ].join(' ')
+        ext.args   = "-f'%CHROM\t%POS\t%REF\t%ALT\\n'"
         ext.prefix = { "${meta.id}_${meta.chr}_posfile_stitch" }
         publishDir = [enabled: false]
     }
@@ -79,33 +54,25 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_STITCH:BCFTOOLS_INDEX' {
-        ext.args      = '--tbi'
-        maxRetries    = 2
+        ext.args   = '--tbi'
         publishDir = [enabled: false]
     }
 
-        withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_STITCH:.*' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_STITCH:.*' {
         publishDir = [
-            [
-                path: { "${params.outdir}/imputation/stitch/concat" },
-                mode: params.publish_dir_mode,
-            ],
+            path: { "${params.outdir}/imputation/stitch/concat" },
+            mode: params.publish_dir_mode,
         ]
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_STITCH:BCFTOOLS_CONCAT' {
-    ext.args = {[
-        "--ligate",
-        "--output-type z",
-    ].join(" ").trim()}
-    ext.prefix = { "${meta.id}_stitch" }
-    }
-
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_STITCH:BCFTOOLS_INDEX' {
-        ext.args     = "--tbi"
+        ext.args   = ["--ligate", "--output-type z"].join(' ')
         ext.prefix = { "${meta.id}_stitch" }
     }
 
-
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_STITCH:BCFTOOLS_INDEX' {
+        ext.args   = "--tbi"
+        ext.prefix = { "${meta.id}_stitch" }
+    }
 
 }
