--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -20,11 +20,15 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CHR_CHECK:VCF_CHR_RENAME:BCFTOOLS_ANNOTATE' {
-        ext.args = [
-            "-Oz",
-            "--no-version"
-        ].join(' ')
+        ext.args   = ["-Oz", "--no-version"].join(' ')
         ext.prefix = { "${meta.id}_chrrename" }
+        publishDir = [ enabled: false ]
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CHR_CHECK:VCF_CHR_RENAME:GAWK' {
+        ext.args   = 'BEGIN {FS="\\t"} NR==1 { if ($1 ~ /^chr/) { col1=""; col2="chr" } else { col1="chr"; col2="" } } { sub(/^chr/, "", $1); if ($1 ~ /^[0-9]+|[XYMT]$/) print col1$1, col2$1; else print $1, $1 }'
+        ext.prefix = { "${meta.id}_chrrename" }
+        ext.suffix = "txt"
         publishDir = [ enabled: false ]
     }
 
