--- a/conf/test_all.config
+++ b/conf/test_all.config
@@ -25,7 +25,7 @@ params {
     depth                = 1
 
     // Genome references
-    fasta  = "https://raw.githubusercontent.com/nf-core/test-datasets/phaseimpute/data/reference_genome/21_22/hs38DH.chr21_22.fa"
+    fasta  = params.pipelines_testdata_base_path + "reference_genome/21_22/hs38DH.chr21_22.fa"
     panel  = "${projectDir}/tests/csv/panel.csv"
     phased = true
     map    = "${projectDir}/tests/csv/map.csv"
