--- a/conf/test_stitch.config
+++ b/conf/test_stitch.config
@@ -24,7 +24,7 @@ params {
     input_region = "${projectDir}/tests/csv/region.csv"
 
     // Genome references
-    fasta   = "https://raw.githubusercontent.com/nf-core/test-datasets/phaseimpute/data/reference_genome/21_22/hs38DH.chr21_22.fa"
+    fasta   = params.pipelines_testdata_base_path + "reference_genome/21_22/hs38DH.chr21_22.fa"
     posfile = "${projectDir}/tests/csv/posfile.csv"
 
     // Impute parameters
