--- a/subworkflows/local/vcf_concordance_glimpse2/tests/nextflow.config
+++ b/subworkflows/local/vcf_concordance_glimpse2/tests/nextflow.config
@@ -3,7 +3,7 @@ params {
 }
 
 process {
-    withName: 'VCF_CONCORDANCE_GLIMPSE2:CONCATENATE' {
+    withName: 'VCF_CONCORDANCE_GLIMPSE2:GAWK' {
         ext.suffix = "txt"
     }
 }
