Normalize panel_prep config

--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -41,7 +41,6 @@ process {
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_NORM' {
         ext.args      = '-m +any --no-version --output-type z'
         ext.prefix    = { "${meta.id}_${meta.chr}_multiallelic" }
-        maxRetries    = 2
         publishDir = [ enabled: false ]
     }
 
@@ -53,7 +52,6 @@ process {
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_VIEW' {
         ext.args      = '-v snps -m 2 -M 2 -Oz'
         ext.prefix    = { "${meta.id}_${meta.chr}_biallelic_snps" }
-        maxRetries    = 2
         publishDir = [ enabled: false ]
     }
 
@@ -64,7 +62,6 @@ process {
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_CONVERT' {
         ext.args = {"--haplegendsample ${meta.id}_${meta.chr}"}
-        maxRetries    = 2
         publishDir = [
             path: { "${params.outdir}/prep_panel/haplegend/" },
             mode: params.publish_dir_mode,
@@ -76,7 +73,6 @@ process {
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_REMOVE' {
         ext.args      = { "-Oz -s^${params.remove_samples}" }
         ext.prefix    = { "${meta.id}_${meta.chr}_biallelic_removed_samples" }
-        maxRetries    = 2
         publishDir = [ enabled: false ]
     }
 
@@ -109,7 +105,6 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SITES_EXTRACT_BCFTOOLS:BCFTOOLS_INDEX_2' {
-        maxRetries    = 2
         ext.prefix = { "${meta.id}_${meta.chr}_glimpse1_sites" }
         publishDir = [
             path: { "${params.outdir}/prep_panel/sites/vcf/" },
@@ -119,9 +114,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SITES_EXTRACT_BCFTOOLS:BCFTOOLS_QUERY' {
-        ext.args = [
-            "-f'%CHROM\t%POS\t%REF,%ALT\\n'",
-        ].join(' ')
+        ext.args   = ["-f'%CHROM\t%POS\t%REF,%ALT\\n'"].join(' ')
         ext.prefix = { "${meta.id}_${meta.chr}_glimpse1_sites_tsv" }
         publishDir = [ enabled: false ]
     }
@@ -151,10 +144,7 @@ process {
 
     // (Optional) Subworkflow: Phasing
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_PHASE_PANEL:VCF_PHASE_SHAPEIT5:BEDTOOLS_MAKEWINDOWS' {
-        ext.args = [
-            '-w 60000',
-            '-s 40000'
-        ].join(' ')
+        ext.args = ['-w 60000', '-s 40000'].join(' ')
         ext.prefix = { "${meta.id}_chunks" }
         publishDir = [ enabled: false ]
     }
@@ -165,7 +155,6 @@ process {
     }
 
     // Subworkflow: Make chunks
-
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CHUNK_GLIMPSE:.*' {
         publishDir = [
             path: { "${params.outdir}/prep_panel/chunks/" },
@@ -174,11 +163,8 @@ process {
         ]
     }
 
-
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CHUNK_GLIMPSE:GLIMPSE2_CHUNK' {
-        ext.args = [
-            "--window-mb 2.0"
-        ].join(' ')
+        ext.args = ["--window-mb 2.0"].join(' ')
         ext.prefix    = { "${meta.panel}_${meta.chr}_chunks_glimpse2" }
         publishDir = [
             path: { "${params.outdir}/prep_panel/chunks/glimpse2/" },
