Normalize panel_prep config

--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -90,6 +90,18 @@ process {
         ]
     }
 
+    // (Optional) Subworkflow: Remove samples from panel
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_REMOVE' {
+        ext.args      = { "-Oz -s^${params.remove_samples}" }
+        ext.prefix    = { "${meta.id}_${meta.chr}_biallelic_removed_samples" }
+        publishDir = [ enabled: false ]
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_INDEX_4' {
+        ext.args     = "--tbi"
+        publishDir = [enabled: false]
+    }
+
     // Subworkflow: VCF_SITES_EXTRACT_BCFTOOLS
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SITES_EXTRACT_BCFTOOLS:.*' {
         publishDir = [ enabled: false ]
@@ -112,7 +124,7 @@ process {
         ]
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SITES_EXTRACT_BCFTOOLS:BCFTOOLS_INDEX' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SITES_EXTRACT_BCFTOOLS:BCFTOOLS_INDEX_2' {
         ext.prefix = { "${meta.id}_${meta.chr}_glimpse1_sites" }
         publishDir = [
             path: { "${params.outdir}/prep_panel/sites/vcf/" },
