Uniformize conf and workflows

--- a/conf/steps/imputation_glimpse1.config
+++ b/conf/steps/imputation_glimpse1.config
@@ -12,6 +12,8 @@
 
 process {
     // Configuration for the glimpse1 imputation subworkflow
+
+    // Call the variants before imputation
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_INPUT:.*' {
         publishDir = [ enabled: false ]
     }
@@ -38,6 +40,7 @@ process {
         ext.args = "--tbi"
     }
 
+    // Impute with GLIMPSE1
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:.*' {
         publishDir = [
             path  : { "${params.outdir}/imputation/glimpse1/" },
@@ -47,10 +50,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:GLIMPSE_CHUNK' {
-        ext.args = [
-            "--window-size 200000",
-            "--buffer-size 20000"
-        ].join(' ')
+        ext.args = ["--window-size 200000", "--buffer-size 20000"].join(' ')
         ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}.chunk" }
         publishDir = [ enabled: false ]
     }
@@ -77,6 +77,7 @@ process {
         ]
     }
 
+    // Concatenate the imputed chunks
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_GLIMPSE1:.*' {
         publishDir = [
             path: { "${params.outdir}/imputation/glimpse1/concat" },
