--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -33,7 +33,6 @@ process {
     }
 
     // Subworkflow: VCF_NORMALIZE_BCFTOOLS
-
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:.*' {
         publishDir = [ enabled: false ]
     }
@@ -44,18 +43,30 @@ process {
         publishDir = [ enabled: false ]
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_INDEX' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_INDEX_1' {
         ext.args     = "--tbi"
         publishDir = [enabled: false]
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_VIEW' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_DEL_MLT_ALL' {
         ext.args      = '-v snps -m 2 -M 2 -Oz'
         ext.prefix    = { "${meta.id}_${meta.chr}_biallelic_snps" }
         publishDir = [ enabled: false ]
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_INDEX_2' {
+        ext.args     = "--tbi"
+        publishDir = [enabled: false]
+    }
+
+    // (Optional) Subworkflow: Remove samples from panel
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_DEL_SPL' {
+        ext.args      = { "-Oz -s^${params.remove_samples}" }
+        ext.prefix    = { "${meta.id}_${meta.chr}_biallelic_removed_samples" }
+        publishDir = [ enabled: false ]
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_INDEX_3' {
         ext.args     = "--tbi"
         publishDir = [enabled: false]
     }
@@ -69,25 +80,12 @@ process {
         ]
     }
 
-    // (Optional) Subworkflow: Remove samples from panel
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_REMOVE' {
-        ext.args      = { "-Oz -s^${params.remove_samples}" }
-        ext.prefix    = { "${meta.id}_${meta.chr}_biallelic_removed_samples" }
-        publishDir = [ enabled: false ]
-    }
-
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_INDEX_4' {
-        ext.args     = "--tbi"
-        publishDir = [enabled: false]
-    }
-
     // Subworkflow: VCF_SITES_EXTRACT_BCFTOOLS
-
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SITES_EXTRACT_BCFTOOLS:.*' {
         publishDir = [ enabled: false ]
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SITES_EXTRACT_BCFTOOLS:VIEW_VCF_SITES' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SITES_EXTRACT_BCFTOOLS:BCFTOOLS_VIEW' {
         ext.args = [
             "-G",
             "-m 2",
@@ -104,7 +102,7 @@ process {
         ]
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SITES_EXTRACT_BCFTOOLS:BCFTOOLS_INDEX_2' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SITES_EXTRACT_BCFTOOLS:BCFTOOLS_INDEX' {
         ext.prefix = { "${meta.id}_${meta.chr}_glimpse1_sites" }
         publishDir = [
             path: { "${params.outdir}/prep_panel/sites/vcf/" },
@@ -158,6 +156,15 @@ process {
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CHUNK_GLIMPSE:.*' {
         publishDir = [
             path: { "${params.outdir}/prep_panel/chunks/" },
+            mode: params.publish_dir_mode,
+            enabled: true
+        ]
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CHUNK_GLIMPSE:GLIMPSE_CHUNK' {
+        ext.prefix    = { "${meta.panel}_${meta.chr}_chunks_glimpse1" }
+        publishDir = [
+            path: { "${params.outdir}/prep_panel/chunks/glimpse1/" },
             mode: params.publish_dir_mode,
             enabled: true
         ]
