--- a/conf/steps/validation.config
+++ b/conf/steps/validation.config
@@ -12,6 +12,8 @@
 
 process {
     // Configuration for the validation step
+
+    // Compute genotype likelihoods for the truth set
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_TRUTH:.*' {
         publishDir = [ enabled: false ]
     }
@@ -54,6 +56,7 @@ process {
         ext.args = "--tbi"
     }
 
+    // Validation subworkflow
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCORDANCE_GLIMPSE2:.*' {
         publishDir = [
             path: { "${params.outdir}/validation/" },
