--- a/conf/steps/imputation_quilt.config
+++ b/conf/steps/imputation_quilt.config
@@ -12,23 +12,6 @@
 
 process {
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CHUNK_GLIMPSE:.*' {
-        publishDir = [
-            path: { "${params.outdir}/prep_panel/chunks/" },
-            mode: params.publish_dir_mode,
-            enabled: true
-        ]
-    }
-
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CHUNK_GLIMPSE:GLIMPSE_CHUNK' {
-        ext.prefix    = { "${meta.panel}_${meta.chr}_chunks_glimpse1" }
-        publishDir = [
-            path: { "${params.outdir}/prep_panel/chunks/glimpse1/" },
-            mode: params.publish_dir_mode,
-            enabled: true
-        ]
-    }
-
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_QUILT:.*' {
         publishDir = [
             path: { "${params.outdir}/imputation/quilt/" },
@@ -36,6 +19,7 @@ process {
         ]
     }
 
+    // Impute quilt
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_QUILT:QUILT_QUILT' {
         ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}.impute" }
         publishDir = [enabled: false]
@@ -46,6 +30,7 @@ process {
         publishDir = [enabled: false]
     }
 
+    // Annotate quilt imputed VCFs
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_QUILT:BCFTOOLS_ANNOTATE' {
         ext.args     = "--set-id '%CHROM:%POS:%REF:%ALT' -Oz"
         ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}.impute.annotate" }
@@ -55,6 +40,7 @@ process {
         ext.args     = "--tbi"
     }
 
+    // Concatenate quilt imputed VCFs
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_QUILT:.*' {
         publishDir = [
             path: { "${params.outdir}/imputation/quilt/concat" },
