--- a/conf/steps/imputation_glimpse1.config
+++ b/conf/steps/imputation_glimpse1.config
@@ -72,7 +72,7 @@ process {
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:INDEX_LIGATE' {
         publishDir = [
-            path: { "${params.outdir}/imputation/glimpse1" }
+            path: { "${params.outdir}/imputation/glimpse1" },
             mode: params.publish_dir_mode,
         ]
     }
