Move to BCFTOOLS_INDEX for glimpse sbwf

--- a/conf/steps/imputation_glimpse1.config
+++ b/conf/steps/imputation_glimpse1.config
@@ -62,7 +62,7 @@ process {
         publishDir = [ enabled: false ]
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:INDEX_PHASE' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:BCFTOOLS_INDEX_2' {
         publishDir = [ enabled: false ]
     }
 
@@ -70,7 +70,7 @@ process {
         ext.prefix = { "${meta.id}_R${meta.region.replace(':','_')}.ligate" }
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:INDEX_LIGATE' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:BCFTOOLS_INDEX_2' {
         publishDir = [
             path: { "${params.outdir}/imputation/glimpse1" },
             mode: params.publish_dir_mode,
