Fix config file

--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -152,6 +152,10 @@ process {
         publishDir = [ enabled: false ]
     }
 
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_PANEL:BCFTOOLS_INDEX' {
+        ext.args = "--tbi"
+    }
+
     // Subworkflow: Make chunks
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CHUNK_GLIMPSE:.*' {
         publishDir = [
