--- a/conf/steps/validation.config
+++ b/conf/steps/validation.config
@@ -71,17 +71,16 @@ process {
         publishDir = [ enabled: false ]
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCORDANCE_GLIMPSE2:GAWK' {
-        ext.args   = "'(NR == 1) || (FNR > 1)'" // Skip header line
-        ext.suffix = { "txt" }
-    }
-
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCORDANCE_GLIMPSE2:GUNZIP' {
         publishDir = [ enabled: false ]
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCORDANCE_GLIMPSE2:ADD_COLUMNS' {
-        ext.prefix = { "${meta.id}_D${meta.depth}_P${meta.panel}_SNP" }
-        publishDir = [ enabled: false ]
+        ext.prefix = { "${meta.id}_D${meta.depth}_P${meta.panel}_C${meta.chr}_SNP" }
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCORDANCE_GLIMPSE2:GAWK' {
+        ext.args   = "'(NR == 1) || (FNR > 1)'" // Skip header line
+        ext.suffix = { "txt" }
     }
 }
