Move test to workflows folder for unifomrization

--- a/nf-test.config
+++ b/nf-test.config
@@ -1,6 +1,6 @@
 config {
     // location for all nf-tests
-    testsDir "tests/pipeline"
+    testsDir "workflows"
 
     // nf-test directory including temporary files for each test
     workDir System.getenv("NXF_TEST_DIR") ?: ".nf-test"
