--- a/tests/config/nf-test.config
+++ b/tests/config/nf-test.config
@@ -3,10 +3,12 @@ params {
     singularity_pull_docker_container = false
     test_data_base = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules'
     modules_testdata_base_path = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/'
+    max_memory = '5.GB'
+    max_cpus = 4
 }
 
 process {
-    cpus = 2
+    cpus = 4
     memory = 3.GB
     time = 2.h
 }
