add test panelprep

--- a/nextflow.config
+++ b/nextflow.config
@@ -224,7 +224,9 @@ profiles {
     test_all        { includeConfig 'conf/test_all.config'      }
     test_quilt      { includeConfig 'conf/test_quilt.config'    }
     test_stitch     { includeConfig 'conf/test_stitch.config'   }
-    test_glimpse2   { includeConfig 'conf/test_glimpse2.config' }
+    test_glimpse2   { includeConfig 'conf/test_glimpse2.config'   }
+    test_panelprep  { includeConfig 'conf/test_panelprep.config'}
+
 
 }
 
