--- a/nextflow.config
+++ b/nextflow.config
@@ -225,6 +225,8 @@ profiles {
     test_quilt      { includeConfig 'conf/test_quilt.config'    }
     test_stitch     { includeConfig 'conf/test_stitch.config'   }
     test_glimpse2   { includeConfig 'conf/test_glimpse2.config'   }
+    test_panelprep  { includeConfig 'conf/test_panelprep.config'}
+
 
 }
 
