separate steps from tools

--- a/conf/test.config
+++ b/conf/test.config
@@ -28,7 +28,9 @@ params {
     panel  = "${projectDir}/tests/csv/panel.csv"
     phased = true
 
-    // Impute parameters
+    // Pipeline steps
     step   = "panelprep,impute"
+
+    // Impute tools
     tools  = "glimpse1"
 }
