--- a/conf/test_panelprep.config
+++ b/conf/test_panelprep.config
@@ -24,6 +24,6 @@ params {
     panel  = "${projectDir}/tests/csv/panel.csv"
     phased = true
 
-    // Step
+    // Pipeline steps
     step   = "panelprep"
 }
