--- a/conf/test_stitch.config
+++ b/conf/test_stitch.config
@@ -27,7 +27,9 @@ params {
     fasta   = params.pipelines_testdata_base_path + "reference_genome/21_22/hs38DH.chr21_22.fa"
     posfile = "${projectDir}/tests/csv/posfile.csv"
 
-    // Impute parameters
+    // Pipeline steps
     step   = "impute"
+
+    // Impute tools
     tools  = "stitch"
 }
