--- a/conf/test_validate.config
+++ b/conf/test_validate.config
@@ -29,5 +29,7 @@ params {
     panel  = "${projectDir}/tests/csv/panel.csv"
     phased = true
     map    = "${projectDir}/tests/csv/map.csv"
+
+    // Pipeline steps
     step   = "validate"
 }
