--- a/conf/test_all.config
+++ b/conf/test_all.config
@@ -30,6 +30,9 @@ params {
     phased = true
     map    = "${projectDir}/tests/csv/map.csv"
 
+    // Pipeline steps
     step   = "all"
-    tools  = "quilt"
+
+    // Impute tools
+    tools  = "glimpse1"
 }
