--- a/conf/test_full.config
+++ b/conf/test_full.config
@@ -26,9 +26,13 @@ params {
     // Input data
     input                  = "${projectDir}/tests/csv/sample_sim_full.csv"
     panel                  = "${projectDir}/tests/csv/panel_full.csv"
+
+    // Pipeline steps
     step                   = "all"
 
-    // Settings
-    tools                 = "glimpse1"
+    // Panelprep optional args
     remove_samples        = "NA12878,NA12891,NA12892"
+
+    // Impute tools
+    tools                 = "glimpse1"
 }
