--- a/conf/test_glimpse2.config
+++ b/conf/test_glimpse2.config
@@ -27,7 +27,9 @@ params {
     panel  = "${projectDir}/tests/csv/panel.csv"
     phased = true
 
-    // Impute parameters
+    // Pipeline steps
     step   = "panelprep,impute"
+
+    // Impute tools
     tools  = "glimpse2"
 }
