--- a/conf/test_sim.config
+++ b/conf/test_sim.config
@@ -26,5 +26,7 @@ params {
 
     // Genome references
     fasta  = params.pipelines_testdata_base_path + "reference_genome/21_22/hs38DH.chr21_22.fa"
+
+    // Pipeline steps
     step   = "simulate"
 }
