separate steps from tools

--- a/conf/test_all.config
+++ b/conf/test_all.config
@@ -30,6 +30,9 @@ params {
     phased = true
     map    = "${projectDir}/tests/csv/map.csv"
 
+    // Pipeline steps
     step   = "all"
+
+    // Impute tools
     tools  = "glimpse1"
 }
