add glimpse2 config

--- a/nextflow.config
+++ b/nextflow.config
@@ -311,6 +311,7 @@ includeConfig 'conf/steps/panel_prep.config'
 includeConfig 'conf/steps/imputation_glimpse1.config'
 includeConfig 'conf/steps/imputation_quilt.config'
 includeConfig 'conf/steps/imputation_stitch.config'
+includeConfig 'conf/steps/imputation_glimpse2.config'
 
 // validation step
 includeConfig 'conf/steps/validation.config'
