--- a/conf/test_all.config
+++ b/conf/test_all.config
@@ -34,5 +34,5 @@ params {
     step   = "all"
 
     // Impute tools
-    tools  = "glimpse1,stitch,quilt"
+    tools  = "glimpse1,glimpse2,stitch,quilt"
 }
