move vcffixup to panelprep

--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -71,6 +71,16 @@ process {
         publishDir = [enabled: false]
     }
 
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:VCFLIB_VCFFIXUP' {
+        ext.prefix   = { "${meta.panel}_${meta.chr}" }
+        publishDir   = [enabled: false]
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_INDEX_4' {
+        ext.args     = "--tbi"
+        publishDir   = [ enabled: false ]
+    }
+
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_CONVERT' {
         ext.args = {"--haplegendsample ${meta.id}_${meta.chr}"}
         publishDir = [
